fix: the menu sign on the phone was not completely visible

--- a/src/css/SelectedProjects/selected-projects.css
+++ b/src/css/SelectedProjects/selected-projects.css
@@ -191,7 +191,7 @@
   }
   .menu-black-icon {
     width: 23px;
-    height: 19.25px;
+    height: 28px;
     background-color: black;
   }
   .selected-projects-content {
